crates/rv-lockfile/src/snapshots/rv_lockfile__tests__parse_git_tag.snap
---
source: crates/rv-lockfile/src/tests.rs
expression: output
---
git:
  - remote: "https://gitlab.com/ekylibre/eky-possibly.git"
    revision: 483d102852e2ab8fcbf695b9e25a40902302a593
    branch: ~
    ref: ~
    tag: v3.1.1
    submodules: ~
    glob: ~
    specs:
      - gem_version:
          name: possibly
          version: 3.1.1
        deps: []
gem:
  - remote: "https://rubygems.org/"
    specs:
      - gem_version:
          name: rake
          version: 13.0.6
        deps: []
platforms:
  - ruby
dependencies:
  - name: possibly
    semver: ~
    nonstandard: true
  - name: rake
    semver: ~
    nonstandard: false
bundled_with: 2.4.22
